sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:6: error: not found: value Change2
  while (Change1==true || Change2==true){
                          ^